added success alert for booking

--- a/views/base.pug
+++ b/views/base.pug
@@ -9,7 +9,8 @@ html
             link(rel='shortcut icon' type='image/png' href='img/favicon.png') 
             title Natours | #{title}
 
-    body
+    //res.locals.alert variable available to templates
+    body(data-alert=`${alert ? alert : ''}`)
         // HEADER
         include _header
         // CONTENT
